tests/baselines/reference/parserAssignmentExpression1.errors.txt
parserAssignmentExpression1.ts(1,1): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
parserAssignmentExpression1.ts(1,2): error TS2304: Cannot find name 'foo'.
parserAssignmentExpression1.ts(1,11): error TS2304: Cannot find name 'bar'.


==== parserAssignmentExpression1.ts (3 errors) ====
    (foo()) = bar;
    ~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
     ~~~
!!! error TS2304: Cannot find name 'foo'.
              ~~~
!!! error TS2304: Cannot find name 'bar'.